--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,109 @@
+name: CI Pipeline (Multi-job)
+
+on:
+  push:
+    branches: [ main ]
+  workflow_dispatch:
+
+env:
+  APP_DIR: app
+  IMAGE_REPO: owusuansah5/myapp
+
+jobs:
+  versioning:
+    runs-on: ubuntu-latest
+    outputs:
+      image_name: ${{ steps.version.outputs.image_name }}
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Increment version
+        id: version
+        working-directory: ${{ env.APP_DIR }}
+        run: |
+          npm version minor --no-git-tag-version
+          VERSION=$(node -p "require('./package.json').version")
+          echo "image_name=${VERSION}-${GITHUB_RUN_NUMBER}" >> $GITHUB_OUTPUT
+
+      - name: Upload updated package.json
+        uses: actions/upload-artifact@v4
+        with:
+          name: package-json
+          path: ${{ env.APP_DIR }}/package.json
+
+  test:
+    runs-on: ubuntu-latest
+    needs: versioning
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: package-json
+          path: ${{ env.APP_DIR }}
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Install & test
+        working-directory: ${{ env.APP_DIR }}
+        run: |
+          npm install
+          npm test
+
+  build_and_push:
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: package-json
+          path: ${{ env.APP_DIR }}
+
+      - name: Docker login
+        run: |
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login \
+            -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Build image
+        run: |
+          docker build -t $IMAGE_REPO:${{ needs.versioning.outputs.image_name }} .
+
+      - name: Push image
+        run: |
+          docker push $IMAGE_REPO:${{ needs.versioning.outputs.image_name }}
+
+  commit_version:
+    runs-on: ubuntu-latest
+    needs: build_and_push
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: package-json
+          path: ${{ env.APP_DIR }}
+
+      - name: Commit version bump
+        run: |
+          git config user.name "owusuansah5"
+          git config user.email "godfredowusuansah5@gmail.com"
+          git add .
+          git commit -m "ci: version bump" || echo "No changes"
+          git push https://${{ secrets.GIT_USERNAME }}:${{ secrets.GIT_PASSWORD }}@github.com/${{ github.repository }}.git HEAD:main
 
