Building image using Github action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,11 +79,20 @@ jobs:
 
       - name: Build image
         run: |
-          docker build -t $IMAGE_REPO:${{ needs.versioning.outputs.image_name }} .
+            TAG=${{ needs.versioning.outputs.image_name }}
+            if [ -z "$TAG" ]; then
+            echo "TAG is empty, using 'latest' as fallback"
+            TAG="latest"
+            fi
+            docker build -t $IMAGE_REPO:$TAG .
 
       - name: Push image
         run: |
-          docker push $IMAGE_REPO:${{ needs.versioning.outputs.image_name }}
+            TAG=${{ needs.versioning.outputs.image_name }}
+            if [ -z "$TAG" ]; then
+            TAG="latest"
+            fi
+            docker push $IMAGE_REPO:$TAG
 
   commit_version:
     runs-on: ubuntu-latest
