--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,18 +80,18 @@ jobs:
       - name: Build image
         run: |
             TAG=${{ needs.versioning.outputs.image_name }}
-            if [ -z "$TAG" ]; then
-            echo "TAG is empty, using 'latest' as fallback"
-            TAG="latest"
-            fi
+            # if [ -z "$TAG" ]; then
+            # echo "TAG is empty, using 'latest' as fallback"
+            # TAG="latest"
+            # fi
             docker build -t $IMAGE_REPO:$TAG .
 
       - name: Push image
         run: |
             TAG=${{ needs.versioning.outputs.image_name }}
-            if [ -z "$TAG" ]; then
-            TAG="latest"
-            fi
+            # if [ -z "$TAG" ]; then
+            # TAG="latest"
+            # fi
             docker push $IMAGE_REPO:$TAG
 
   commit_version:
@@ -114,5 +114,5 @@ jobs:
           git config user.email "godfredowusuansah5@gmail.com"
           git add .
           git commit -m "ci: version bump" || echo "No changes"
-          git push https://${{ secrets.GIT_USERNAME }}:${{ secrets.GIT_PASSWORD }}@github.com/${{ github.repository }}.git HEAD:main
+          git push https://${{ secrets.GIT_USERNAME }}:${{ secrets.GIT_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
 
