Building image using Github action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,7 +79,7 @@ jobs:
 
       - name: Build image
         run: |
-            TAG=${{ needs.versioning.outputs.image_name }}
+            # TAG=${{ needs.versioning.outputs.image_name }}
             # if [ -z "$TAG" ]; then
             # echo "TAG is empty, using 'latest' as fallback"
             # TAG="latest"
@@ -88,10 +88,10 @@ jobs:
 
       - name: Push image
         run: |
-            TAG=${{ needs.versioning.outputs.image_name }}
-            # if [ -z "$TAG" ]; then
-            # TAG="latest"
-            # fi
+            # TAG=${{ needs.versioning.outputs.image_name }}
+            # # if [ -z "$TAG" ]; then
+            # # TAG="latest"
+            # # fi
             docker push $IMAGE_REPO:$TAG
 
   commit_version:
