--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
 
   build_and_push:
     runs-on: ubuntu-latest
-    needs: test
+    needs: versioning
 
     steps:
       - uses: actions/checkout@v4
