--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,6 +97,7 @@ jobs:
   commit_version:
     runs-on: ubuntu-latest
     needs: build_and_push
+    if: github.actor != 'github-actions[bot]'
 
     steps:
       - uses: actions/checkout@v4
